Address code review issues from PR #4276: - Disable language switching for untitled documents - Remove unneeded imports - Switch from deprecated CollectionUtils to lodash - Fix label truncation bug - Fix bug where language change is made redundantly multiple times - Rename some methods for clarity - Add two simple unit tests

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -173,9 +173,7 @@ a, img {
     }
     
     /**
-     * Custom <select> styling currently only being used for language selection
-     * but could be reused elsewhere.
-     * (Here's a good intro to custom form fields: http://goo.gl/T4EPg)
+     * Custom <select> styling - currently only used for language selection
      */
     select.status-bar-select {
         -webkit-appearance: none;
@@ -196,6 +194,11 @@ a, img {
         }
         &:hover {
             text-decoration: underline;
+        }
+        &[disabled] {
+            cursor: inherit;
+            background: none;
+            text-decoration: none;
         }
     }
 }
